<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context="petrov.dmitry.testtask.AddClientActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/button_save"
                android:textSize="12dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="#FFF"
                android:text="@string/button_edit"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/client_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_first_name">

                    <AutoCompleteTextView
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/client_first_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_last_name">

                    <AutoCompleteTextView
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_middle_name">

                    <AutoCompleteTextView
                        android:id="@+id/middle_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_phone">

                    <AutoCompleteTextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_date">

                    <AutoCompleteTextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_flows"/>

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transaction_balance">

                    <AutoCompleteTextView
                        android:id="@+id/balance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:enabled="false"
                        android:textColor="#ff0000" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>